tests/profile/error/camera/navstate_missing_position.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "setNavigationState",
    "anchor": "none",
    "aim": "aim",
    "frame": "root",
    "up": { "x": 4.0, "y": 5.0, "z": 6.0 },
    "yaw": 10.0,
    "pitch": -10.0
  }
}
